--- a/resume.tex
+++ b/resume.tex
@@ -53,7 +53,8 @@ pdfcreator={Latex}]{hyperref}
 \def\se{\raisebox{-.4ex}{\FilledSmallCircle\SmallCircle\SmallCircle\SmallCircle\SmallCircle}}
 \def\sf{\raisebox{-.4ex}{\SmallCircle\SmallCircle\SmallCircle\SmallCircle\SmallCircle}}
 
-\input{personaldata.tex}
+\input{data.tex}
+%\input{personaldata.tex}
 
 \begin{document}
 
@@ -81,7 +82,7 @@ pdfcreator={Latex}]{hyperref}
 %	SUMMARY
 %-------------------------------------------------------------------------------
 
-RF Engineer with work experience in embedded RF driver implementation, hands-on RF system/block (PLL, LNA, DPA, TDC, XO) modeling and debugging, DSP algorithms, and test scripting. Extensive technical expertise in RF embedded systems, object-oriented programming, RF test automation, and SW/HW debug tools. Interested in RF firmware and DSP.
+RF FW Engineer with work experience in embedded RF driver implementation, hands-on RF system/block (PLL, LNA, DPA, TDC) modeling and debugging, DSP algorithms, and test scripting. Extensive technical expertise in RF embedded systems, object-oriented programming, RF test automation, and SW/HW debug tools. Interested in RF firmware and DSP.
 
 \vfill
 
@@ -98,8 +99,19 @@ RF Engineer with work experience in embedded RF driver implementation, hands-on 
 \begin{itemize}[label=$\bullet$, leftmargin=1em]
 
     \item
+    \textbf{Apple Inc. \hfill San Diego, CA}\vspace{2pt}\\
+    \textbf{Cellular RF Firmware Engineer \hfill May 2021 \textendash\ Present}\vspace{2pt}
+    \begin{itemize}[nosep, leftmargin=1.15em]
+        \item Implement driver in \cpp for calibration and regular operation for 5G FR2 frontend IC.  
+        \item Debug integration issues in both simulated and real hardware platforms.
+        \item Debug Gitlab CI integration failures, solving issues across multiple repositores.
+    \end{itemize}
+
+\vfill
+
+    \item
     \textbf{Innophase Inc. \hfill San Diego, CA}\vspace{2pt}\\
-    \textbf{Senior RF Systems Engineer \hfill Apr. 2017 \textendash\ Present}\vspace{2pt}
+    \textbf{Senior RF Systems Engineer \hfill Apr. 2017 \textendash\ Apr. 2021}\vspace{2pt}
     \begin{itemize}[nosep, leftmargin=1.15em]
         \item Designed and implemented RF drivers and calibration routines in C for embedded IoT and cellular SoCs.
         \item Debugged and solved FW integration with HW, on digital simulation and target HW using CPU tracing tools.
@@ -192,10 +204,9 @@ RF Engineer with work experience in embedded RF driver implementation, hands-on 
 	\vspace{6pt}
     }
     \begin{itemize}[leftmargin=5.3em]
-        \item[\sa] Python, git, C, Matlab, SA, SG, PS, DMM, VNA, Loadpull, Spanish (native)
-        \item[\sb] VHDL, gdb, LabView, SystemVue, Linux
-        \item[\sc] \cpp, SystemC
-        \item[\sd] \csharp, German (B2)
+        \item[\sa] C, \cpp, Python, git, Matlab, SA, SG, PS, DMM, VNA, Loadpull, Spanish (native)
+        \item[\sb] VHDL, gdb, LabView, SystemVue, Linux, Gitlab CI
+        \item[\sc] SystemC, \csharp, German (B2)
     \end{itemize}
 \end{minipage}
 \hfill
