remove address, formatting

--- a/resume.tex
+++ b/resume.tex
@@ -16,7 +16,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %-------------------------------------------------------------------------------
-%	PACKAGES
+% PACKAGES
 %-------------------------------------------------------------------------------
 
 \documentclass[10pt, letterpaper]{letter}
@@ -39,7 +39,7 @@ pdfcreator={Latex}]{hyperref}
 \pagenumbering{gobble}
 
 %-------------------------------------------------------------------------------
-%	DOCUMENT DEFS
+% DOCUMENT DEFS
 %-------------------------------------------------------------------------------
 
 \def\myplus{\hspace{-.3em}\raisebox{.4ex}{ \tiny +}}
@@ -59,27 +59,26 @@ pdfcreator={Latex}]{hyperref}
 \begin{document}
 
 %-------------------------------------------------------------------------------
-%	HEADER
+% HEADER
 %-------------------------------------------------------------------------------
 
 \vfill
 
 \begin{center}
 
-    \LARGE \textbf{Francisco (Paco) Leon}\vspace{8pt}\\
+    \LARGE \textbf{Francisco (Paco) Leon}\\
     \large
 
     \href{mailto:\myemail}{\myemail},\ \myphone,\
     \href{https://www.linkedin.com/in/francisco-leon-ab8178127/}
     {\includegraphics[width=11pt]{in.png}}\\
-    \myaddress
 
 \end{center}
 
 \vfill
 
 %-------------------------------------------------------------------------------
-%	SUMMARY
+% SUMMARY
 %-------------------------------------------------------------------------------
 
 RF FW Engineer with work experience in embedded RF driver implementation, hands-on RF system/block (PLL, LNA, DPA, TDC) modeling and debugging, DSP algorithms, and test scripting. Extensive technical expertise in RF embedded systems, object-oriented programming, RF test automation, and SW/HW debug tools. Interested in RF firmware and DSP.
@@ -87,7 +86,7 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
 \vfill
 
 %-------------------------------------------------------------------------------
-%	WORK EXPERIENCE
+% WORK EXPERIENCE
 %-------------------------------------------------------------------------------
 
 \textcolor{Blue}{
@@ -96,7 +95,7 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
     \hrule height 1.5pt
 }
 
-\begin{itemize}[label=$\bullet$, leftmargin=1em]
+\begin{itemize}[label=, leftmargin=0em]
 
     \item
     \textbf{Apple Inc. \hfill San Diego, CA}\vspace{2pt}\\
@@ -119,7 +118,7 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
         \item Uncovered root cause for simulation/measurement mismatchs, using RF lab instruments and Python+Matlab models.
         \item Maintained Python DUT+equipment API, adding modularity, version control, scripting, and data analysis.
         % \item Implemented 802.11g/n, BT, BLE, LTE, and NR Python and Matlab modem scripts for design verification.
-	% \item Modeled innovative RF polar architecture in Matlab, analyzing block- and system-level performances.
+        % \item Modeled innovative RF polar architecture in Matlab, analyzing block- and system-level performances.
     \end{itemize}
 
 \vfill
@@ -128,8 +127,8 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
     \textbf{Midtronics Inc. \hfill Chicago, IL}\vspace{2pt}\\
     \textbf{Software Test Engineer \hfill May 2016 \textendash\ Mar. 2017}\vspace{2pt}
     \begin{itemize}[nosep, leftmargin=1.15em]
-	\item Created and executed test plans for embedded systems, revealing undiscovered issues in 20\myplus\ different products.
-	\item Designed and maintained automated testing tools and scripts in \csharp, reducing testing time from days to hours.
+        \item Created and executed test plans for embedded systems, revealing undiscovered issues in 20\myplus\ different products.
+        \item Designed and maintained automated testing tools and scripts in \csharp, reducing testing time from days to hours.
         \item Managed issue tracking platform JIRA, improving project reporting and drastically reducing escaped defects.
     \end{itemize}
 
@@ -139,8 +138,8 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
     \textbf{Technical University of Madrid \hfill Madrid, Spain}\vspace{2pt}\\
     \textbf{Radar Research Assistant \hfill Jul. 2013 \textendash\ Jul. 2015}\vspace{2pt}
     \begin{itemize}[nosep, leftmargin=1.15em]
-	\item Designed in Matlab and tested prototype of signal and data processing chains for collision-avoidance radar system.
-	\item Drafted and assembled mm-waves radar hardware, improving past performances and allowing new applications.
+        \item Designed in Matlab and tested prototype of signal and data processing chains for collision-avoidance radar system.
+        \item Drafted and assembled mm-waves radar hardware, improving past performances and allowing new applications.
         \item Advised European Border Agency Frontex in deployable technologies for EU border surveillance projects.
     \end{itemize}
 
@@ -149,7 +148,7 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
 \vfill
 
 %-------------------------------------------------------------------------------
-%	EDUCATION
+% EDUCATION
 %-------------------------------------------------------------------------------
 
 \textcolor{Blue}{
@@ -158,14 +157,14 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
     \hrule height 1.5pt
 }
 
-\begin{itemize}[label=$\bullet$, leftmargin=1em]
+\begin{itemize}[label=,leftmargin=0em]
 
     \item
     \textbf{Illinois Institute of Technology\hfill Chicago, IL}\vspace{2pt}\\
     \textbf{MS, Electrical Engineering\hfill Aug. 2016}\vspace{2pt}
     \begin{itemize}[nosep, leftmargin=1.15em]
-	\item GPA 4.0/4.0
-	\item Relevant work: SW/HW design of SDR on Zedboard+AD9364, FFT algorithms VHDL implementation and synthesis.
+        \item GPA 4.0/4.0
+        \item Relevant work: SW/HW design of SDR on Zedboard+AD9364, FFT algorithms VHDL implementation and synthesis.
     \end{itemize}
 
 \vfill
@@ -174,8 +173,8 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
     \textbf{Technical University of Madrid\hfill Madrid, Spain}\vspace{2pt}\\
     \textbf{MS, Telecommunications Engineering\hfill Aug. 2016}\vspace{2pt}
     \begin{itemize}[nosep, leftmargin=1.15em]
-	\item GPA 8.73/10
-	\item Relevant work: Matlab implementation of MIMO algorithms and wireless channel estimation.
+        \item GPA 8.73/10
+        \item Relevant work: Matlab implementation of MIMO algorithms and wireless channel estimation.
     \end{itemize}
 
 \vfill
@@ -184,8 +183,8 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
     \textbf{Technical University of Madrid\hfill Madrid, Spain\vspace{2pt}}\\
     \textbf{BS, Telecommunications Engineering\hfill Jun. 2014}\vspace{2pt}
     \begin{itemize}[nosep, leftmargin=1.15em]
-    	\item GPA 7.91/10. Class top 5\%.
-	\item Relevant work: FSK transceiver on breadboard, GSM radio interface characterization.
+        \item GPA 7.91/10. Class top 5\%.
+        \item Relevant work: FSK transceiver on breadboard, GSM radio interface characterization.
     \end{itemize}
 
 \end{itemize}
@@ -193,7 +192,7 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
 \vfill
 
 %-------------------------------------------------------------------------------
-%	SKILLS & PUBLICATIONS
+% SKILLS & PUBLICATIONS
 %-------------------------------------------------------------------------------
 
 \begin{minipage}[t]{.47\linewidth}
@@ -201,7 +200,7 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
         \large\textbf{Skills}
         \vspace{3pt}
         \hrule height 1.5pt
-	\vspace{6pt}
+        \vspace{6pt}
     }
     \begin{itemize}[leftmargin=5.3em]
         \item[\sa] C, \cpp, Python, git, Matlab, SA, SG, PS, DMM, VNA, Loadpull, Spanish (native)
@@ -215,11 +214,11 @@ RF FW Engineer with work experience in embedded RF driver implementation, hands-
         \large\textbf{Publications}
         \vspace{3pt}
         \hrule height 1.5pt
-	\vspace{6pt}
+        \vspace{6pt}
     }
-    \begin{itemize}[label=$\bullet$, leftmargin=1em]
-	\item \href{http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=7346261&url=http\%3A\%2F\%2Fieeexplore.ieee.org\%2Fxpls\%2Fabs\_all.jsp\%3Farnumber\%3D7346261}{``Processing chain of a radar network for safety improvement in the usage of heavy machinery," European Radar Conference (EuRAD), Paris 2015}.
-	\item \href{http://www.mdpi.com/1424-8220/14/3/3921}{``On the Use of Low-Cost Radar Networks for Collision Warning Systems Aboard Dumpers," MDPI Sensors 2014}.
+    \begin{itemize}[label=--,leftmargin=1em]
+        \item \href{http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=7346261&url=http\%3A\%2F\%2Fieeexplore.ieee.org\%2Fxpls\%2Fabs\_all.jsp\%3Farnumber\%3D7346261}{``Processing chain of a radar network for safety improvement in the usage of heavy machinery," European Radar Conference (EuRAD), Paris 2015}.
+        \item \href{http://www.mdpi.com/1424-8220/14/3/3921}{``On the Use of Low-Cost Radar Networks for Collision Warning Systems Aboard Dumpers," MDPI Sensors 2014}.
     \end{itemize}
 \end{minipage}
 
